--- a/Presentation/mobSocial.WebApi/mobSocial.WebApi.csproj
+++ b/Presentation/mobSocial.WebApi/mobSocial.WebApi.csproj
@@ -298,6 +298,7 @@
     <Compile Include="Models\Battles\VideoBattleVotePublicModel.cs" />
     <Compile Include="Models\Battles\VideoParticipantBoxModel.cs" />
     <Compile Include="Models\Battles\VideoParticipantPublicModel.cs" />
+    <Compile Include="Models\Conversation\ConversationEntityModel.cs" />
     <Compile Include="Models\Conversation\ConversationReplyModel.cs" />
     <Compile Include="Models\Conversation\ConversationRequestModel.cs" />
     <Compile Include="Models\Conversation\ConversationResponseModel.cs" />
