--- a/Presentation/mobSocial.WebApi/mobSocial.WebApi.csproj
+++ b/Presentation/mobSocial.WebApi/mobSocial.WebApi.csproj
@@ -257,6 +257,7 @@
     <Compile Include="Controllers\RoleController.cs" />
     <Compile Include="Controllers\SchoolController.cs" />
     <Compile Include="Controllers\SettingsController.cs" />
+    <Compile Include="Controllers\SkillController.cs" />
     <Compile Include="Controllers\SponsorController.cs" />
     <Compile Include="Controllers\TimelineController.cs" />
     <Compile Include="Controllers\UserController.cs" />
@@ -273,6 +274,7 @@
     <Compile Include="Extensions\ModelExtensions\RoleExtensions.cs" />
     <Compile Include="Extensions\ModelExtensions\SchoolExtensions.cs" />
     <Compile Include="Extensions\ModelExtensions\SettingExtensions.cs" />
+    <Compile Include="Extensions\ModelExtensions\SkillExtensions.cs" />
     <Compile Include="Extensions\ModelExtensions\UserExtensions.cs" />
     <Compile Include="Extensions\SponsorExtensions.cs" />
     <Compile Include="Extensions\UtilityExtensions.cs" />
@@ -333,6 +335,9 @@
     <Compile Include="Models\Settings\ThirdPartySettingsModel.cs" />
     <Compile Include="Models\Settings\UrlSettingsModel.cs" />
     <Compile Include="Models\Settings\UserSettingsModel.cs" />
+    <Compile Include="Models\Skills\UserSkillEntityModel.cs" />
+    <Compile Include="Models\Skills\SkillModel.cs" />
+    <Compile Include="Models\Skills\UserSkillModel.cs" />
     <Compile Include="Models\Social\UserCommentModel.cs" />
     <Compile Include="Models\Social\UserCommentPublicModel.cs" />
     <Compile Include="Models\Social\UserCommentRequestModel.cs" />
