--- a/Tests/mobSocial.Tests/mobSocial.Tests.csproj
+++ b/Tests/mobSocial.Tests/mobSocial.Tests.csproj
@@ -86,6 +86,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\Microsoft.AspNet.Mvc.5.2.3\lib\net45\System.Web.Mvc.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web.Razor">
+      <HintPath>..\..\packages\Microsoft.AspNet.Razor.3.2.3\lib\net45\System.Web.Razor.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.WebPages, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.dll</HintPath>
@@ -110,6 +113,7 @@
   <ItemGroup>
     <Compile Include="Api\AuthenticationControllerTests.cs" />
     <Compile Include="Api\EducationControllerTests.cs" />
+    <Compile Include="Api\SkillControllerTests.cs" />
     <Compile Include="Api\VideoBattleControllerTests.cs" />
     <Compile Include="Mock\MockHelper.cs" />
     <Compile Include="Services\EmailTemplateServiceTests.cs" />
