--- a/Presentation/mobSocial.WebApi/mobSocial.WebApi.csproj
+++ b/Presentation/mobSocial.WebApi/mobSocial.WebApi.csproj
@@ -337,6 +337,7 @@
     <Compile Include="Models\Settings\UserSettingsModel.cs" />
     <Compile Include="Models\Skills\SetFeaturedMediaModel.cs" />
     <Compile Include="Models\Skills\SkillWithUsersModel.cs" />
+    <Compile Include="Models\Skills\UserSkillEntityMediaModel.cs" />
     <Compile Include="Models\Skills\UserSkillEntityModel.cs" />
     <Compile Include="Models\Skills\SkillModel.cs" />
     <Compile Include="Models\Skills\UserSkillModel.cs" />
