--- a/Presentation/mobSocial.WebApi/Web.config
+++ b/Presentation/mobSocial.WebApi/Web.config
@@ -5,14 +5,17 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
+  <connectionStrings>
+    <add name="migrationConnectionString" connectionString="Data Source=.\sqlexpress;Initial Catalog=mobsocial_standalone_new;Integrated Security=False;Persist Security Info=False;User ID=iis_user;Password=iis_user"/>
+  </connectionStrings>
   <appSettings>
     <add key="owin:AutomaticAppStartup" value="true" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="encryptionKey" value="y5ey7VK8wE9pzGW5LsLK" />
-    <add key="encryptionSalt" value="W8BLW9eo0hTLM+fg352c" />
+    <add key="encryptionKey" value="AGqlt0VPWSjM6zcD5upK" />
+    <add key="encryptionSalt" value="SNz9u5+hzuz+e17UtjMk" />
   </appSettings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework">
