--- a/Libraries/mobSocial.Core/mobSocial.Core.csproj
+++ b/Libraries/mobSocial.Core/mobSocial.Core.csproj
@@ -46,6 +46,7 @@
       <HintPath>..\..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -71,6 +72,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplicationHelper.cs" />
     <Compile Include="Caching\BaseCacheProvider.cs" />
     <Compile Include="Caching\CacheExtensions.cs" />
     <Compile Include="Caching\HttpCacheProvider.cs" />
