--- a/Libraries/mobSocial.Core/packages.config
+++ b/Libraries/mobSocial.Core/packages.config
@@ -6,10 +6,17 @@
   <package id="DryIoc.Web" version="2.0.0" targetFramework="net451" />
   <package id="DryIoc.WebApi" version="2.1.0" targetFramework="net451" />
   <package id="DryIoc.WebApi.Owin" version="2.0.0" targetFramework="net451" />
+  <package id="jQuery" version="1.6.4" targetFramework="net451" />
+  <package id="Microsoft.AspNet.SignalR" version="2.2.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.2.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net451" />
+  <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
 </packages>
