--- a/Libraries/mobSocial.Data/mobSocial.Data.csproj
+++ b/Libraries/mobSocial.Data/mobSocial.Data.csproj
@@ -220,6 +220,10 @@
     <Compile Include="Migrations\201704111238475_InitialCreate.Designer.cs">
       <DependentUpon>201704111238475_InitialCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706190904121_GeoServices.cs" />
+    <Compile Include="Migrations\201706190904121_GeoServices.Designer.cs">
+      <DependentUpon>201706190904121_GeoServices.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\MigrationsContextFactory.cs" />
     <Compile Include="Migrations\mobSocialDbMigrator.cs" />
@@ -239,6 +243,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201704111238475_InitialCreate.resx">
       <DependentUpon>201704111238475_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706190904121_GeoServices.resx">
+      <DependentUpon>201706190904121_GeoServices.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
