migration operation moved to a public extension for easy accessiblity from integrating apps

--- a/Libraries/mobSocial.Data/mobSocial.Data.csproj
+++ b/Libraries/mobSocial.Data/mobSocial.Data.csproj
@@ -225,6 +225,7 @@
       <DependentUpon>201706190904121_GeoServices.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Migrations\MigrationManager.cs" />
     <Compile Include="Migrations\MigrationsContextFactory.cs" />
     <Compile Include="Migrations\mobSocialDbMigrator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
