--- a/Libraries/mobSocial.Services/mobSocial.Services.csproj
+++ b/Libraries/mobSocial.Services/mobSocial.Services.csproj
@@ -48,6 +48,21 @@
       <HintPath>..\..\packages\ImageProcessor.Web.4.5.3.0\lib\net45\ImageProcessor.Web.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.Owin, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.Owin.3.0.1\lib\net45\Microsoft.Owin.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Owin.Host.SystemWeb, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.Owin.Host.SystemWeb.3.0.1\lib\net45\Microsoft.Owin.Host.SystemWeb.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Owin.Security, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.Owin.Security.3.0.1\lib\net45\Microsoft.Owin.Security.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Owin.Security.Cookies, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.Owin.Security.Cookies.3.0.1\lib\net45\Microsoft.Owin.Security.Cookies.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Owin.Security.OAuth, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.Owin.Security.OAuth.3.0.1\lib\net45\Microsoft.Owin.Security.OAuth.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -55,6 +70,9 @@
     <Reference Include="NReco.VideoConverter, Version=1.1.0.0, Culture=neutral, PublicKeyToken=395ccb334978a0cd, processorArchitecture=MSIL">
       <HintPath>..\..\packages\NReco.VideoConverter.1.1.0.0\lib\net20\NReco.VideoConverter.dll</HintPath>
       <Private>True</Private>
+    </Reference>
+    <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -140,6 +158,7 @@
     <Compile Include="GeoServices\IStateService.cs" />
     <Compile Include="GeoServices\StateService.cs" />
     <Compile Include="Helpers\DateTimeHelper.cs" />
+    <Compile Include="Helpers\OAuthHelper.cs" />
     <Compile Include="Helpers\PaymentCardHelper.cs" />
     <Compile Include="Helpers\DatabaseHelpers.cs" />
     <Compile Include="Helpers\FileHelpers.cs" />
@@ -163,6 +182,17 @@
     <Compile Include="Notifications\INotificationService.cs" />
     <Compile Include="Notifications\NotificationEventService.cs" />
     <Compile Include="Notifications\NotificationService.cs" />
+    <Compile Include="OAuth\AppTokenService.cs" />
+    <Compile Include="OAuth\App_Start\OwinStartup.cs" />
+    <Compile Include="OAuth\ClientService.cs" />
+    <Compile Include="OAuth\IAppTokenService.cs" />
+    <Compile Include="OAuth\IClientService.cs" />
+    <Compile Include="OAuth\OAuthAuthenticationService.cs" />
+    <Compile Include="OAuth\OAuthConstants.cs" />
+    <Compile Include="OAuth\Provider\ApplicationAuthorizationCodeProvider.cs" />
+    <Compile Include="OAuth\Provider\ApplicationCookieManager.cs" />
+    <Compile Include="OAuth\Provider\ApplicationOAuthServerProvider.cs" />
+    <Compile Include="OAuth\Provider\ApplicationRefreshTokenProvider.cs" />
     <Compile Include="Payments\IPaymentTransactionService.cs" />
     <Compile Include="Payments\PaymentTransactionService.cs" />
     <Compile Include="Payments\UserPaymentMethodService.cs" />
