--- a/Libraries/mobSocial.Services/packages.config
+++ b/Libraries/mobSocial.Services/packages.config
@@ -4,6 +4,12 @@
   <package id="FluentScheduler" version="5.0.0" targetFramework="net451" />
   <package id="ImageProcessor" version="2.3.3.0" targetFramework="net451" />
   <package id="ImageProcessor.Web" version="4.5.3.0" targetFramework="net451" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net451" />
   <package id="NReco.VideoConverter" version="1.1.0.0" targetFramework="net451" />
+  <package id="Owin" version="1.0" targetFramework="net451" />
 </packages>
